public enum ValidationStatus
{
    EVALAUTE_ADDTIONAL_INFORMATION,
    CALCULATE_ELU_DISCREPANCY,
    GIS_ANALYSIS_AND_FIELD_DIGITISING,
    FIELD_AND_CROP_MODELLING,
    UPDATE_VANDV_DATABASE,
    CALCULATE_DAM_VOLUMES,
    CALCULATE_STREAM_FLOW_REDUCTION,
    IDENTIFY_UNREGISTERED_USERS,
    VANDV_DATABASE_ANALYSIS_TO_IDENTIFY_RECORD_STATUS,
    PROJECT_INCEPTION_REPORT,

    PUBLIC_PARTICIPATION_SESSIONS,
    EVALUATE_WARMS_REGISTRATION_INFORMATION,

    OBTAIN_SUPPORTIVE_SPATIAL_INFORMATION,
    OBTAIN_OTHER_SUPPORTIVR_INFORMATION,
    PROPERTY_AND_SOURCE_EVALUATION

}